log in and register html and css

--- a/log-in.html
+++ b/log-in.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Calculus</title>
+        <title>Log in</title>
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
@@ -69,13 +69,11 @@
             </ul>
         </nav>
             <div class="main-page">
-                <div class="topics">
-                    <h1 class="topics-header">Topics</h1>
-                    <ul class="topics-list">
-                        <li class="topics-item"><a href="#">Topic</a></li>
-                    </ul>
+                <div class="log-in">
+                    <form>
+                        Username: <input type="text" required name="name">
+                    </form>
                 </div>
             </div>
-        <script type="text/javascript" src="script.js"></script>
     </body>
 </html>
