--- a/register.html
+++ b/register.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Calculus</title>
+        <title>Register</title>
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
@@ -68,14 +68,35 @@
                 <li class="nav-item"><a href="./register.html">Sign up</a></li>
             </ul>
         </nav>
-            <div class="main-page">
-                <div class="topics">
-                    <h1 class="topics-header">Topics</h1>
-                    <ul class="topics-list">
-                        <li class="topics-item"><a href="#">Topic</a></li>
-                    </ul>
-                </div>
+        <div class="main-page">
+            <div class="register">
+                <h1>
+                    Register a New Account
+                </h1>
+                <form>
+                    Full Name: <input type="text" required name="name"><br>
+                    Email: <input type="email" required name="email"><br>
+                    <p><strong>Reminder:</strong> There are only two genders. </p>
+                    Gender:
+                    <input type="radio" name="gender" value="male">Male
+                    <input type="radio" name="gender" value="Female">Female<br>
+                    Calculus Level (self defining):
+                    <select name="level">
+                        <option value="calculus 1">Calculus 1</option>
+                        <option value="calculus 2">Calculus 2</option>
+                        <option value="calculus 3">Calculus 3</option>
+                    </select><br>
+                    Select all as fast as you can:
+                    <input type="checkbox" name="1">
+                    <input type="checkbox" name="2">
+                    <input type="checkbox" name="3">
+                    <input type="checkbox" name="4">
+                    <input type="checkbox" name="5"><br>
+                    <input type="submit" value="register!">
+                    <input type="reset">
+                    <a href="index.html">go back</a>
+                </form>
             </div>
-        <script type="text/javascript" src="script.js"></script>
+        </div>
     </body>
 </html>
