--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
                         </svg>
                     </a>
                 </li>
-                <li class="nav-item"><a href="#">About</a></li>
-                <li class="nav-item"><a href="#">Questions</a></li>
+                <li class="nav-item"><a href="./about.html">About</a></li>
+                <li class="nav-item"><a href="./questions.html">Questions</a></li>
                 <li class="nav-item"><a href="./log-in.html">Log in</a></li>
                 <li class="nav-item"><a href="./register.html">Sign up</a></li>
             </ul>
@@ -72,7 +72,14 @@
                 <div class="topics">
                     <h1 class="topics-header">Topics</h1>
                     <ul class="topics-list">
-                        <li class="topics-item"><a href="#">Topic</a></li>
+                        <li class="topics-item"><a href="./topics_pages/limits-continuity.html">Limits and Continuity</a></li>
+                        <li class="topics-item"><a href="#">Derivatives: definition and basic rules</a></li>
+                        <li class="topics-item"><a href="#">Derivatives: chain rule and other advanced topics</a></li>
+                        <li class="topics-item"><a href="#">Applications of derivatives</a></li>
+                        <li class="topics-item"><a href="#">Analyzing functions</a></li>
+                        <li class="topics-item"><a href="#">Integrals</a></li>
+                        <li class="topics-item"><a href="#">Differential equations</a></li>
+                        <li class="topics-item"><a href="#">Applications of integrals</a></li>
                     </ul>
                 </div>
             </div>
