--- a/log-in.html
+++ b/log-in.html
@@ -62,8 +62,8 @@
                         </svg>
                     </a>
                 </li>
-                <li class="nav-item"><a href="#">About</a></li>
-                <li class="nav-item"><a href="#">Questions</a></li>
+                <li class="nav-item"><a href="./about.html">About</a></li>
+                <li class="nav-item"><a href="./questions.html">Questions</a></li>
                 <li class="nav-item"><a href="./log-in.html">Log in</a></li>
                 <li class="nav-item"><a href="./register.html">Sign up</a></li>
             </ul>
