add p5 js file and local deploy

--- a/element-pages/squeeze-theorem.html
+++ b/element-pages/squeeze-theorem.html
@@ -5,6 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Calculus</title>
         <link rel="stylesheet" type="text/css" href="../style.css">
+        <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+        <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/p5@1.4.1/lib/p5.js"></script>    
     </head>
     <body>
         <nav>
@@ -69,10 +72,14 @@
             </ul>
         </nav>
             <div class="main-page">
-                <div class="topics">
-                    <h1 class="topics-header">Squeeze Theorem</h1>
+                <div class="element">
+                    <h1 class="element-header">Squeeze Theorem</h1>
+                    <div style="margin-top: 50px;"></div>
+                    <p> $$x = {-b \pm \sqrt{b^2-4ac} \over 2a}$$</p>
+                    <div class="canvas">
+                        <script src="../visualizations/squeeze-theorem.js"></script>
+                    </div>
                 </div>
             </div>
-        <script type="text/javascript" src="../script.js"></script>
     </body>
 </html>
