--- a/index.html
+++ b/index.html
@@ -5,69 +5,17 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Calculus</title>
         <link rel="stylesheet" type="text/css" href="style.css">
+        <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     </head>
     <body>
-        <nav>
-            <ul class="nav-list">
-                <li class="nav-item">
-                    <a href="./index.html">
-                        <?xml version="1.0" standalone="no"?>
-                        <!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 20010904//EN"
-                        "http://www.w3.org/TR/2001/REC-SVG-20010904/DTD/svg10.dtd">
-                        <svg version="1.0" xmlns="http://www.w3.org/2000/svg"
-                        width="100.000000pt" height="43.400000pt" viewBox="0 0 1000.000000 434.000000"
-                        preserveAspectRatio="xMidYMid meet" class="logo">
-                        <g transform="translate(0.000000,434.000000) scale(0.100000,-0.100000)"
-                        fill="#000000" stroke="none">
-                        <path d="M1285 3309 c-203 -30 -407 -150 -530 -311 -131 -173 -188 -375 -164
-                        -586 55 -486 533 -813 1018 -696 37 8 113 38 171 67 94 45 116 61 206 151 82
-                        83 108 117 146 191 87 169 115 338 84 514 -76 436 -490 734 -931 670z m284
-                        -130 c25 -6 89 -32 141 -56 81 -39 108 -59 181 -132 71 -71 94 -102 133 -181
-                        59 -120 81 -228 72 -352 -41 -590 -754 -861 -1171 -443 -122 122 -183 241
-                        -205 403 -48 355 205 698 565 768 75 15 206 11 284 -7z"/>
-                        <path d="M1293 2985 c-124 -34 -244 -128 -297 -233 -100 -198 -63 -448 89
-                        -591 99 -94 215 -135 364 -129 82 3 106 8 163 35 64 30 178 126 178 150 0 6
-                        -22 25 -50 43 l-50 32 -55 -50 c-72 -66 -131 -86 -234 -80 -56 3 -89 12 -126
-                        30 -125 65 -192 192 -183 349 11 193 150 329 336 329 81 0 132 -21 196 -80
-                        l46 -42 55 42 56 43 -38 39 c-106 110 -291 156 -450 113z"/>
-                        <path d="M4741 2935 c-76 -22 -147 -63 -200 -116 -194 -193 -162 -549 61 -699
-                        90 -60 145 -75 273 -75 99 0 116 3 168 27 64 30 132 80 147 108 8 15 2 23 -37
-                        48 l-47 31 -41 -38 c-60 -55 -117 -74 -212 -69 -128 6 -218 65 -272 178 -37
-                        79 -42 219 -10 305 30 81 113 165 188 190 107 35 242 13 302 -51 29 -31 36
-                        -30 84 11 l40 35 -43 40 c-24 21 -69 49 -100 61 -75 28 -224 35 -301 14z"/>
-                        <path d="M8801 2931 c-67 -23 -98 -47 -136 -100 -25 -36 -30 -54 -33 -115 -7
-                        -136 48 -199 223 -256 96 -31 162 -66 181 -95 25 -38 28 -95 7 -135 -54 -103
-                        -217 -117 -317 -25 l-39 35 -43 -36 c-24 -19 -44 -39 -44 -44 0 -20 97 -81
-                        158 -100 79 -24 156 -25 236 -3 79 22 158 95 176 163 20 73 9 161 -25 210 -36
-                        52 -83 80 -214 125 -119 42 -146 57 -167 96 -79 153 162 271 296 144 l25 -23
-                        45 38 c43 38 44 39 25 60 -10 11 -43 32 -73 47 -74 36 -201 43 -281 14z"/>
-                        <path d="M2765 2898 c-7 -18 -90 -210 -184 -427 -94 -216 -171 -397 -171 -402
-                        0 -5 29 -9 64 -9 l64 0 42 105 42 105 210 -2 210 -3 41 -102 42 -103 67 0 c38
-                        0 68 2 68 4 0 2 -83 197 -184 432 l-185 429 -56 3 c-55 3 -56 2 -70 -30z m142
-                        -301 c40 -100 75 -190 79 -199 6 -17 -6 -18 -156 -18 -150 0 -162 1 -156 18
-                        31 86 152 382 156 382 3 0 37 -82 77 -183z"/>
-                        <path d="M3620 2495 l0 -435 255 0 255 0 0 55 0 55 -195 0 -195 0 0 380 0 380
-                        -60 0 -60 0 0 -435z"/>
-                        <path d="M5572 2603 c3 -318 4 -330 26 -379 49 -109 151 -174 283 -182 172
-                        -10 300 75 343 229 13 45 16 113 16 357 l0 302 -59 0 -60 0 -3 -312 c-3 -306
-                        -4 -314 -27 -361 -33 -67 -85 -100 -166 -105 -108 -7 -171 26 -211 112 -23 50
-                        -24 56 -24 359 l0 307 -61 0 -60 0 3 -327z"/>
-                        <path d="M6690 2495 l0 -435 255 0 255 0 0 55 0 55 -195 0 -195 0 0 380 0 380
-                        -60 0 -60 0 0 -435z"/>
-                        <path d="M7532 2608 l3 -323 26 -55 c36 -77 80 -124 147 -157 51 -25 68 -28
-                        157 -28 83 0 109 4 152 24 68 30 134 102 162 174 20 55 21 75 21 372 l0 315
-                        -60 0 -60 0 0 -304 c0 -200 -4 -315 -11 -337 -33 -96 -108 -144 -219 -137 -86
-                        5 -137 36 -171 105 -23 47 -24 55 -27 361 l-3 312 -60 0 -60 0 3 -322z"/>
-                        </g>
-                        </svg>
-                    </a>
-                </li>
-                <li class="nav-item"><a href="./about.html">About</a></li>
-                <li class="nav-item"><a href="./questions.html">Questions</a></li>
-                <li class="nav-item"><a href="./log-in.html">Log in</a></li>
-                <li class="nav-item"><a href="./register.html">Sign up</a></li>
-            </ul>
-        </nav>
+        <div id="nav-placeholder">
+
+        </div>
+        <script>
+            $(function(){
+                $("#nav-placeholder").load("nav.html");
+            });
+        </script>
             <div class="main-page">
                 <div class="topics">
                     <h1 class="topics-header">Topics</h1>
@@ -83,6 +31,5 @@
                     </ul>
                 </div>
             </div>
-        <script type="text/javascript" src="script.js"></script>
     </body>
 </html>
