--- a/inner-nav.html
+++ b/inner-nav.html
@@ -1,3 +1,5 @@
+<!--navbar to be used when inside of a folder (element-pages, topics_pages, etc) due to the paths being different to the root folder-->
+
 <nav>
     <ul class="nav-list">
         <li class="nav-item">
