animations and css

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!--color pallette: https://paletton.com/#uid=13M0u0kllllaFw0g0qFqFg0w0aF-->
+
 <!DOCTYPE html>
 <html>
     <head>
@@ -21,13 +23,11 @@
                     <h1 class="topics-header">Topics</h1>
                     <ul class="topics-list">
                         <li class="topics-item"><a href="./topics/limits-continuity.html">Limits and Continuity</a></li>
-                        <li class="topics-item"><a href="#">Derivatives: definition and basic rules</a></li>
-                        <li class="topics-item"><a href="#">Derivatives: chain rule and other advanced topics</a></li>
-                        <li class="topics-item"><a href="#">Applications of derivatives</a></li>
-                        <li class="topics-item"><a href="#">Analyzing functions</a></li>
+                        <li class="topics-item"><a href="./topics/derivatives.html">Derivatives</a></li>
                         <li class="topics-item"><a href="#">Integrals</a></li>
-                        <li class="topics-item"><a href="#">Differential equations</a></li>
-                        <li class="topics-item"><a href="#">Applications of integrals</a></li>
+                        <li class="topics-item"><a href="#">Analyzing functions</a></li>
+                        <li class="topics-item"><a href="#">Sequences & Series</a></li>
+                        <li class="topics-item"><a href="#">Reiman Sum</a></li>
                     </ul>
                 </div>
             </div>
