--- a/elements/tangent-graph.html
+++ b/elements/tangent-graph.html
@@ -10,6 +10,7 @@
         <script src="https://cdn.jsdelivr.net/npm/p5@1.4.1/lib/p5.js"></script>
         <script src="https://code.jquery.com/jquery-1.10.2.js"></script>  
         <script src="../env-vars.js"></script>
+        <script src="../visualizations/graphing.js"></script>
     </head>
     <body>
         <div id="nav-placeholder">
