--- a/about.html
+++ b/about.html
@@ -18,7 +18,8 @@
         </script>
         <div class="main-page">
             <h1>Build by Carson Harrell</h1>
-            <p> more work to be done later </p>
+            <p>The main idea in calculus is called the fundamental theorem of calculus. This main idea says that the two calculus processes, differential and integral calculus, are opposites. That is, a person can use differential calculus to undo an integral calculus process.
+            </p>
         </div>
     </body>
 </html>
