--- a/elements/derivative-definition.html
+++ b/elements/derivative-definition.html
@@ -24,8 +24,12 @@
                 <div class="element">
                     <h1 class="element-header">Derivative Definition</h1>
                     <div style="margin-top: 50px;"></div>
-                    <div class="canvas">
+                    <p>The main idea in calculus is called the fundamental theorem of calculus. This main idea says that the two calculus processes, differential and integral calculus, are opposites. That is, a person can use differential calculus to undo an integral calculus process.</p>
+                    <div id="canvas-holder">
                         <script src="../visualizations/derivative-definition.js"></script>
+                    </div>
+                    <div> 
+                        test div
                     </div>
                 </div>
             </div>
