--- a/elements/tangent-graph.html
+++ b/elements/tangent-graph.html
@@ -24,7 +24,7 @@
                 <div class="element">
                     <h1 class="element-header">Tangent Line Graph</h1>
                     <div style="margin-top: 50px;"></div>
-                    <div class="canvas">
+                    <div id="canvas-holder">
                         <script src="../visualizations/tangent-graph.js"></script>
                     </div>
                 </div>
