--- a/index.html
+++ b/index.html
@@ -31,5 +31,11 @@
                     </ul>
                 </div>
             </div>
+    <div style="padding-top: 8em;"></div>
+    <hr>
+    <footer>
+        <p>Carson Harrell</p>       
+        <p><a href="mailto:thecarsonharrell@gmail.com">thecarsonharrell@gmail.com</a></p>
+      </footer>
     </body>
 </html>
