--- a/index.html
+++ b/index.html
@@ -23,17 +23,23 @@
             <div class="topics">
                 <h1 class="topics-header">Topics</h1>
                 <ul class="topics-list">
-                    <li class="topics-item"><a href="./topics/limits-continuity.html">Limits and Continuity</a></li>
-                    <li><span class="caret">Derivatives</span>
+                    <!-- <li class="topics-item"><a href="./topics/limits-continuity.html">Limits and Continuity</a></li> -->
+                    <li class="topics-item"><span class="caret">Derivatives</span>
                         <ul class="nested">
                             <li class="topics-item"><a href="./elements/derivative-definition.html">Definition of the Derivative</a>
                             <li class="topics-item"><a href="./elements/tangent-graph.html">Slope of Tangent Line</a>
                         </ul>
                     </li>
-                    <li class="topics-item"><a href="#">Integrals</a></li>
+                    <li class="topics-item"><span class="caret">Integrals</span>
+                        <ul class="nested">
+                            <li class="topics-item"><a href="./elements/derivative-definition.html">Area Under the Curve</a>
+                            <li class="topics-item"><a href="./elements/tangent-graph.html">Negative and Positive Area</a>
+                        </ul>
+                    </li>
+                    <!-- <li class="topics-item"><a href="#">Integrals</a></li>
                     <li class="topics-item"><a href="#">Analyzing functions</a></li>
                     <li class="topics-item"><a href="#">Sequences & Series</a></li>
-                    <li class="topics-item"><a href="#">Reiman Sum</a></li>
+                    <li class="topics-item"><a href="#">Reiman Sum</a></li> -->
                 </ul>
             </div>
         </div>
