Added first integral visualization

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     </li>
                     <li class="topics-item"><span class="caret">Integrals</span>
                         <ul class="nested">
-                            <li class="topics-item"><a href="./elements/derivative-definition.html">Area Under the Curve</a>
+                            <li class="topics-item"><a href="./elements/reimman1.html">Area Under the Curve</a>
                             <li class="topics-item"><a href="./elements/tangent-graph.html">Negative and Positive Area</a>
                         </ul>
                     </li>
