--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <li class="topics-item"><span class="caret">Integrals</span>
                         <ul class="nested">
                             <li class="topics-item"><a href="./elements/reimman1.html">Area Under the Curve</a>
-                            <li class="topics-item"><a href="./elements/tangent-graph.html">Negative and Positive Area</a>
+                            <li class="topics-item"><a href="./elements/reimman2.html">Negative and Positive Area</a>
                         </ul>
                     </li>
                     <!-- <li class="topics-item"><a href="#">Integrals</a></li>
