Added 3D vector visualization

--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
                             <li class="topics-item"><a href="./elements/reimman2.html">Negative and Positive Area</a>
                         </ul>
                     </li>
+                    <li class="topics-item"><span class="caret">3D Volumes and Vectors</span>
+                        <ul class="nested">
+                            <li class="topics-item"><a href="./elements/reimman1.html">Area Under the Curve</a>
+                            <li class="topics-item"><a href="./elements/3Dvector.html">3D Vectors</a>
+                        </ul>
+                    </li>
                     <!-- <li class="topics-item"><a href="#">Integrals</a></li>
                     <li class="topics-item"><a href="#">Analyzing functions</a></li>
                     <li class="topics-item"><a href="#">Sequences & Series</a></li>
