--- a/elements/3Dvector.html
+++ b/elements/3Dvector.html
@@ -8,24 +8,24 @@
         <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
         <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/p5@1.4.1/lib/p5.js"></script>
-        <script src="https://code.jquery.com/jquery-1.10.2.js"></script>    
+        <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+        <script src="../visualizations/graphing.js"></script>
     </head>
     <body>
         <div id="nav-placeholder">
 
         </div>
         <script>
-            $(function(){
+            $(function() {
                 $("#nav-placeholder").load("../inner-nav.html");
             });
         </script>
             <div class="main-page">
                 <div class="element">
-                    <h1 class="element-header">Squeeze Theorem</h1>
+                    <h1 class="element-header">Tangent Line Graph</h1>
                     <div style="margin-top: 50px;"></div>
-                    <p> $$x = {-b \pm \sqrt{b^2-4ac} \over 2a}$$</p>
-                    <div class="canvas">
-                        <script src="../visualizations/squeeze-theorem.js"></script>
+                    <div id="canvas-holder">
+                        <script src="../visualizations/3Dvector.js"></script>
                     </div>
                 </div>
             </div>
