Added 2nd 3D vis

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     </li>
                     <li class="topics-item"><span class="caret">3D Volumes and Vectors</span>
                         <ul class="nested">
-                            <li class="topics-item"><a href="./elements/reimman1.html">Area Under the Curve</a>
+                            <li class="topics-item"><a href="./elements/rotate-graph.html">Graph of square root rotated about x-axis</a>
                             <li class="topics-item"><a href="./elements/3Dvector.html">3D Vectors</a>
                         </ul>
                     </li>
