--- a/index.html
+++ b/index.html
@@ -34,11 +34,18 @@
                         <ul class="nested">
                             <li class="topics-item"><a href="./elements/reimman1.html">Area Under the Curve</a>
                             <li class="topics-item"><a href="./elements/reimman2.html">Negative and Positive Area</a>
+                            <li class="topics-item"><a href="./elements/arc-length.html">Arc Length of a Function</a>
                         </ul>
                     </li>
                     <li class="topics-item"><span class="caret">3D Volumes and Vectors</span>
                         <ul class="nested">
                             <li class="topics-item"><a href="./elements/rotate-graph.html">Graph of square root rotated about x-axis</a>
+                            <li class="topics-item"><a href="./elements/3Dvector.html">3D Vectors</a>
+                        </ul>
+                    </li>
+                    <li class="topics-item"><span class="caret">Differential Equations</span>
+                        <ul class="nested">
+                            <li class="topics-item"><a href="./elements/eulers-method.html">Euler's Method</a>
                             <li class="topics-item"><a href="./elements/3Dvector.html">3D Vectors</a>
                         </ul>
                     </li>
