Added Adnan's Euler Method vis

--- a/elements/eulers-method.html
+++ b/elements/eulers-method.html
@@ -9,7 +9,7 @@
         <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/p5@1.4.1/lib/p5.js"></script>
         <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-        <script src="../visualizations/graphing.js"></script>
+        <!-- <script src="../visualizations/graphing.js"></script> -->
     </head>
     <body>
         <div id="nav-placeholder">
@@ -22,7 +22,7 @@
         </script>
             <div class="main-page">
                 <div class="element">
-                    <h1 class="element-header">Tangent Line Graph</h1>
+                    <h1 class="element-header">Euler's Method</h1>
                     <div style="margin-top: 50px;"></div>
                     <div id="canvas-holder">
                         <script src="../visualizations/eulers-method.js"></script>
