--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <li class="topics-item"><span class="caret">Differential Equations</span>
                         <ul class="nested">
                             <li class="topics-item"><a href="./elements/eulers-method.html">Euler's Method</a>
-                            <li class="topics-item"><a href="./elements/3Dvector.html">3D Vectors</a>
+                            <!-- <li class="topics-item"><a href="./elements/3Dvector.html">3D Vectors</a> -->
                         </ul>
                     </li>
                     <!-- <li class="topics-item"><a href="#">Integrals</a></li>
