--- a/elements/derivative-definition.html
+++ b/elements/derivative-definition.html
@@ -24,13 +24,13 @@
                 <div class="element">
                     <h1 class="element-header">Derivative Definition</h1>
                     <div style="margin-top: 50px;"></div>
-                    <p>The main idea in calculus is called the fundamental theorem of calculus. This main idea says that the two calculus processes, differential and integral calculus, are opposites. That is, a person can use differential calculus to undo an integral calculus process.</p>
+                    <!-- <p>The main idea in calculus is called the fundamental theorem of calculus. This main idea says that the two calculus processes, differential and integral calculus, are opposites. That is, a person can use differential calculus to undo an integral calculus process.</p> -->
                     <div id="canvas-holder">
                         <script src="../visualizations/derivative-definition.js"></script>
                     </div>
-                    <div> 
+                    <!-- <div> 
                         test div
-                    </div>
+                    </div> -->
                 </div>
             </div>
     </body>
