--- a/elements/reimman1.html
+++ b/elements/reimman1.html
@@ -22,7 +22,7 @@
         </script>
             <div class="main-page">
                 <div class="element">
-                    <h1 class="element-header">Tangent Line Graph</h1>
+                    <h1 class="element-header">Area Under the Curve</h1>
                     <div style="margin-top: 50px;"></div>
                     <div id="canvas-holder">
                         <script src="../visualizations/riemman1.js"></script>
