--- a/elements/rotate-graph.html
+++ b/elements/rotate-graph.html
@@ -22,7 +22,7 @@
         </script>
             <div class="main-page">
                 <div class="element">
-                    <h1 class="element-header">Tangent Line Graph</h1>
+                    <h1 class="element-header">Rotation About the X-Axis</h1>
                     <div style="margin-top: 50px;"></div>
                     <div id="canvas-holder">
                         <script src="../visualizations/rotate-graph.js"></script>
