--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                             <li class="topics-item"><a href="./elements/reimman1.html">Area Under the Curve</a>
                             <li class="topics-item"><a href="./elements/reimman2.html">Negative and Positive Area</a>
                             <li class="topics-item"><a href="./elements/arc-length.html">Arc Length of a Function</a>
+                                <li class="topics-item"><a href="./elements/polar-area.html">Polar Area</a>
                         </ul>
                     </li>
                     <li class="topics-item"><span class="caret">3D Volumes and Vectors</span>
@@ -56,7 +57,8 @@
                 </ul>
             </div>
         </div>
-        <div style="padding-top: 8em;"></div>
+        <div class="padding">
+        </div>
         <hr>
         <footer>
             <p>Carson Harrell</p>       
