--- a/nav.html
+++ b/nav.html
@@ -6,9 +6,9 @@
             </img>
             </a>
         </li>
-        <li class="nav-item"><a href="./about.html">About</a></li>
+        <li class="nav-item"><a href="./about.html"><p>About</a></li>
         <li class="nav-item"><a href="./questions.html">Questions</a></li>
-        <li class="nav-item"><a href="./log-in.html">Log in</a></li>
-        <li class="nav-item"><a href="./register.html">Sign up</a></li>
+        <!-- <li class="nav-item"><a href="./log-in.html">Log in</a></li>
+        <li class="nav-item"><a href="./register.html">Sign up</a></li> -->
     </ul>
 </nav>
