--- a/elements/rotate-graph.html
+++ b/elements/rotate-graph.html
@@ -23,6 +23,7 @@
             <div class="main-page">
                 <div class="element">
                     <h1 class="element-header">Rotation About the X-Axis</h1>
+                    <h3 style="text-align: center;">not compatable on mobile</h3>
                     <div style="margin-top: 50px;"></div>
                     <div id="canvas-holder">
                         <script src="../visualizations/rotate-graph.js"></script>
