--- a/inner-nav.html
+++ b/inner-nav.html
@@ -1,6 +1,6 @@
 <!--navbar to be used when inside of a folder (element-pages, topics_pages, etc) due to the paths being different to the root folder-->
 
-<nav>
+<nav class="sticky">
     <ul class="nav-list">
         <li class="nav-item">
             <a href="../index.html">
