--- a/nav.html
+++ b/nav.html
@@ -1,4 +1,4 @@
-<nav>
+<nav class="sticky" id="navbar">
     <ul class="nav-list">
         <li class="nav-item">
             <a href="./index.html">
