--- a/nav.html
+++ b/nav.html
@@ -2,13 +2,13 @@
     <ul class="nav-list">
         <li class="nav-item">
             <a href="./index.html">
-            <img class="logo" src="calculus-logo.svg">
+            <img class="logo" src="./calculus-logo.svg">
             </img>
             </a>
         </li>
         <li class="nav-item"><a href="./about.html"><p>About</a></li>
         <li class="nav-item"><a href="./questions.html">Questions</a></li>
-        <!-- <li class="nav-item"><a href="./log-in.html">Log in</a></li>
-        <li class="nav-item"><a href="./register.html">Sign up</a></li> -->
+        <li class="nav-item"><a href="../log-in.html">Log in</a></li>
+        <li class="nav-item"><a href="../register.html">Sign up</a></li>
     </ul>
 </nav>
