--- a/register.html
+++ b/register.html
@@ -22,27 +22,9 @@
                     Register a New Account
                 </h1>
                 <form>
-                    Full Name: <input type="text" required name="name"><br>
                     Email: <input type="email" required name="email"><br>
-                    <p><strong>Reminder:</strong> There are only two genders. </p>
-                    Gender:
-                    <input type="radio" name="gender" value="male">Male
-                    <input type="radio" name="gender" value="Female">Female<br>
-                    Calculus Level (self defining):
-                    <select name="level">
-                        <option value="calculus 1">Calculus 1</option>
-                        <option value="calculus 2">Calculus 2</option>
-                        <option value="calculus 3">Calculus 3</option>
-                    </select><br>
-                    Select all as fast as you can:
-                    <input type="checkbox" name="1">
-                    <input type="checkbox" name="2">
-                    <input type="checkbox" name="3">
-                    <input type="checkbox" name="4">
-                    <input type="checkbox" name="5"><br>
-                    <input type="submit" value="register!">
-                    <input type="reset">
-                    <a href="index.html">go back</a>
+                    Password: <input type="email" required name="password"> <br>
+                    <button id="btnSignup" type="button" class="button buttonBlue">Sign up</button>
                 </form>
             </div>
         </div>
