--- a/src/index.html
+++ b/src/index.html
@@ -9,14 +9,15 @@
         <title>Calculus</title>
         <link rel="stylesheet" type="text/css" href="style.css">
         <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-        <script src="dropdown.js"></script>
+        <script src="./dropdown.js"></script>
+        <script type="module" src="dist/bundle.js"></script>
     </head>
     <body>
         <div id="nav-placeholder"></div>
 
         <script>
             $(function(){
-                $("#nav-placeholder").load("nav.html");
+                $("#nav-placeholder").load("/nav.html");
             });
         </script>
 
