--- a/elements/eulers-method.html
+++ b/elements/eulers-method.html
@@ -9,7 +9,7 @@
         <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/p5@1.4.1/lib/p5.js"></script>
         <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-        <!-- <script src="../visualizations/graphing.js"></script> -->
+        <script src="../visualizations/graphing.js"></script>
     </head>
     <body>
         <div id="nav-placeholder">
